[gd_scene load_steps=2 format=3 uid="uid://dyudx6ussdlve"]

[ext_resource type="Script" path="res://src/terminal/TerminalWindows/MenuTerminalWindow/MenuTerminalWindowScene.gd" id="1_6nf6j"]

[node name="MenuTerminalWindow" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6nf6j")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(900, 26)
layout_mode = 2
text = "PLACEHOLDER"
autowrap_mode = 3

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Back"

[node name="ExitButton" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
